# gramarye

./: CMakeLists.txt  README-architecture.md  README-components.md  README-rendering.md  README-systems.md  README.md  build.sh  build_test.sh  build_web.sh  run.sh  shell.html  t.txt
include/: camera.h  clay_renderer_raylib.h  entity.h  game.h
include/components/: animation.h  atlas.h  atlas_table.h  bar_value.h  chunk.h  coord.h  floor.h  health.h  key.h  position.h  screenbuffer.h  sprite.h  sprite_table.h  tile.h  tilemap.h  validator.h
include/core/hash/: int_coord_hash.h
include/input/: input.h  input_provider.h
include/renderer/: render_layer.h  renderer.h
include/systems/: camera_system.h  chunk_render_system.h  game_state.h  game_system.h  input_system.h  kcomb_image.h  keyring.h  movement_system.h  render_system.h  screen_system.h  tile_edit_system.h  tilemap_edit_system.h  tilemap_render_system.h  ui_system.h
include/ui/elements/: button.h
include/ui/shared/: float.h  props.h  theme.h
raylib/: clay_renderer_raylib.c
src/: camera.c  entity.c  main.c
src/components/: atlas.c  atlas_table.c  bar_value.c  chunk.c  health.c  position.c  sprite.c  tile.c  tilemap.c
src/core/hash/: int_coord_hash.c  uuid_hash.c
src/input/: input_provider.c
src/renderer/: renderer.c
src/systems/: camera_system.c  chunk_render_system.c  game_system.c  input_system.c  kcomb_image.c  movement_system.c  render_system.c  tile_edit_system.c  tilemap_render_system.c  ui_system.c
src/ui/elements/: button.c
tests/: README.md  test_common.h  test_int_coord_hash.c  test_runner.c  test_table_operations.c
